<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/TextContent.TitleLarge"
        android:id="@+id/category_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/book_title"
        android:text="@string/category"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        style="@style/TextContent.BodyMedium"
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/book_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_label"
        />

    <TextView
        style="@style/TextContent.TitleLarge"
        android:id="@+id/description_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/book_title"
        android:text="@string/book_description"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"
        />

    <TextView
        style="@style/TextContent.BodyMedium"
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/book_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_label"
        />
</androidx.constraintlayout.widget.ConstraintLayout>